--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Levonliu\\Packages\\Service\\ServiceProvider"
+                "Levonliu\\Packages\\Service\\ServiceProvider",
+                "Levonliu\\Packages\\Service\\EventServiceProvider"
             ]
         }
     }
